src/test/test_cases/invalid/semanticErr/higher_order_functions/mapTypeErr.wacc
# Output:
# Semantic error

# Program:

begin
    bool[] a = [true, false];
    println map - a
end